; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_sdp.c_bta_hf_client_sdp_cback.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/hf_client/extr_bta_hf_client_sdp.c_bta_hf_client_sdp_cback.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64 }
%struct.TYPE_8__ = type { i8*, %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i8* }

@.str = private unnamed_addr constant [36 x i8] c"bta_hf_client_sdp_cback status:0x%x\00", align 1
@bta_hf_client_cb = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@BTA_HF_CLIENT_ACP = common dso_local global i64 0, align 8
@BTA_HF_CLIENT_DISC_ACP_RES_EVT = common dso_local global i8* null, align 8
@BTA_HF_CLIENT_DISC_INT_RES_EVT = common dso_local global i8* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @bta_hf_client_sdp_cback to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bta_hf_client_sdp_cback(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32 @APPL_TRACE_DEBUG(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i8* %5)
  %7 = load i64, i64* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @bta_hf_client_cb, i32 0, i32 0, i32 0), align 8
  %8 = load i64, i64* @BTA_HF_CLIENT_ACP, align 8
  %9 = icmp eq i64 %7, %8
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i8*, i8** @BTA_HF_CLIENT_DISC_ACP_RES_EVT, align 8
  store i8* %11, i8** %4, align 8
  br label %14

12:                                               ; preds = %1
  %13 = load i8*, i8** @BTA_HF_CLIENT_DISC_INT_RES_EVT, align 8
  store i8* %13, i8** %4, align 8
  br label %14

14:                                               ; preds = %12, %10
  %15 = call i64 @osi_malloc(i32 16)
  %16 = inttoptr i64 %15 to %struct.TYPE_8__*
  store %struct.TYPE_8__* %16, %struct.TYPE_8__** %3, align 8
  %17 = icmp ne %struct.TYPE_8__* %16, null
  br i1 %17, label %18, label %28

18:                                               ; preds = %14
  %19 = load i8*, i8** %4, align 8
  %20 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %21 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %20, i32 0, i32 1
  %22 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %21, i32 0, i32 0
  store i8* %19, i8** %22, align 8
  %23 = load i8*, i8** %2, align 8
  %24 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %24, i32 0, i32 0
  store i8* %23, i8** %25, align 8
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %27 = call i32 @bta_sys_sendmsg(%struct.TYPE_8__* %26)
  br label %28

28:                                               ; preds = %18, %14
  ret void
}

declare dso_local i32 @APPL_TRACE_DEBUG(i8*, i8*) #1

declare dso_local i64 @osi_malloc(i32) #1

declare dso_local i32 @bta_sys_sendmsg(%struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
